Move src file into src dir

--- a/libvirt/c/Makefile
+++ b/libvirt/c/Makefile
@@ -2,23 +2,26 @@ CC=gcc
 # CFLAGS=-I.
 
 LIBS = -lvirt
-I_DIR = include
+BIN_DIR = bin
+INC__DIR = include
 O_DIR = obj
+SRC_DIR = src
 
 # _DEPS = basic.h
-# DEPS = $(patsubst %,$(IDIR)/%,$(_DEPS))
+# DEPS = $(patsubst %,$(INC_DIR)/%,$(_DEPS))
 
 _OBJ = basic.o
 OBJ = $(patsubst %,$(O_DIR)/%,$(_OBJ))
 
+SRC = $(patsubst %,$(SRC_DIR)/%,%.c)
 
-$(O_DIR)/%.o: %.c $(DEPS)
+$(O_DIR)/%.o: $(SRC) $(DEPS)
 	$(CC) -c -o $@ $< $(CFLAGS)
 
 basic: $(OBJ)
-	$(CC) -o $@ $^ $(CFLAGS) $(LIBS)
+	$(CC) -o $(BIN_DIR)/$@ $^ $(CFLAGS) $(LIBS)
 
 .PHONY: clean
 
 clean:
-	rm -f $(O_DIR)/*.o *~ core $(INCDIR)/*~ 
+	rm -f $(BIN_DIR)/* $(O_DIR)/*.o $(SRC_DIR)/*~ core # $(INC_DIR)/*~ 
