Generate executable jar

--- a/java/jol/pom.xml
+++ b/java/jol/pom.xml
@@ -8,7 +8,13 @@
     <name>jol</name>
 
     <properties>
-        <version.jol>0.9</version.jol>
+        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
+        <version.jdk>1.8</version.jdk>
+        <java.main.class>com.github.vjuranek.code_snippets.JolSimple</java.main.class>
+        <!-- versions -->
+        <version.jol>0.14</version.jol>
+        <version.maven.compiler>3.3</version.maven.compiler>
+        <version.maven.shade>2.4.3</version.maven.shade>
     </properties>
 
     <dependencies>
@@ -18,4 +24,41 @@
             <version>${version.jol}</version>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-compiler-plugin</artifactId>
+                <version>${version.maven.compiler}</version>
+                <configuration>
+                    <source>${version.jdk}</source>
+                    <target>${version.jdk}</target>
+                </configuration>
+            </plugin>
+
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <version>${version.maven.shade}</version>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${java.main.class}</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
