camel: executable jar

--- a/integration/camel/camel-basic/pom.xml
+++ b/integration/camel/camel-basic/pom.xml
@@ -16,6 +16,7 @@
         <maven.compiler.target>17</maven.compiler.target>
 
         <dependency.camel>3.20.1</dependency.camel>
+        <java.main.class>com.github.vjuranek.camel.CamelBasic</java.main.class>
     </properties>
 
     <dependencyManagement>
@@ -44,4 +45,30 @@
             <artifactId>camel-file</artifactId>
         </dependency>
     </dependencies>
+
+    <build>
+        <plugins>
+            <plugin>
+                <groupId>org.apache.maven.plugins</groupId>
+                <artifactId>maven-shade-plugin</artifactId>
+                <executions>
+                    <execution>
+                        <phase>package</phase>
+                        <goals>
+                            <goal>shade</goal>
+                        </goals>
+                        <configuration>
+                            <createDependencyReducedPom>false</createDependencyReducedPom>
+                            <transformers>
+                                <transformer
+                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
+                                    <mainClass>${java.main.class}</mainClass>
+                                </transformer>
+                            </transformers>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+        </plugins>
+    </build>
 </project>
