--- a/tracing/opentelemetry/java/counter/src/main/resources/application.properties
+++ b/tracing/opentelemetry/java/counter/src/main/resources/application.properties
@@ -1,2 +1,3 @@
 quarkus.application.name=counter
 quarkus.otel.exporter.otlp.traces.endpoint=http://jaeger:4317
+quarkus.log.console.format=%d{HH:mm:ss} %-5p traceId=%X{traceId}, parentId=%X{parentId}, spanId=%X{spanId}, sampled=%X{sampled} [%c{2.}] (%t) %s%e%n  
